@@ -28,6 +28,7 @@
     <!-- dummy -->
     <div class='datetime datetime-dummy'>$date_time $source</div>
 
-    $target
+    <div class='target'>$target</div>
   </div>
+  <div class='child'>$child</div>
 </div>
